samples/_failures_safe/1761285974_30038e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c292f4d.c: In function ‘main’:
./samples/SAFE/__tmp_5c292f4d.c:144:5: error: expected declaration or statement at end of input
  144 |     printf("=====================\n");
      |     ^~~~~~
